<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Technothlon</string>
    <string name="action_settings">Settings</string>
    <string name="alt_technothlon">Logo: Technothlon Partial</string>
    <string name="title_activity_main">Technothlon</string>
    <string name="title_section1">Technothlon</string>
    <string name="title_section2">Technopedia</string>
    <string name="title_section3">Techno Coup D\'œil</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_sync">Sync Now</string>
    <string name="preference_file_key">katana_private</string>
    <string name="tcd_fetch_id">technocoupdoeil_last_fetch_id</string>
    <string name="title_activity_tcdsingle_viewer">Techno Coup D\'œil</string>
    <string name="str_action_facebook">Read on Facebook</string>
    <string name="str_action_google">Read on Google+</string>
    <string name="str_action_tumblr">Read on Tumblr</string>
    <string name="str_action_disqus">Discuss Answer</string>

</resources>
