<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      xmlns:yourapp="http://schemas.android.com/apk/res-auto"
      tools:context="org.techniche.technothlon.katana.TCDSingleViewer">
    <item android:id="@+id/action_share"
          android:title="@string/str_action_share"
          yourapp:showAsAction="ifRoom"
          yourapp:actionProviderClass="android.support.v7.widget.ShareActionProvider"
        />
    <item
        android:id="@+id/action_facebook"
        android:title="@string/str_action_facebook" />
    <item
        android:id="@+id/action_google"
        android:title="@string/str_action_google" />
    <item
        android:id="@+id/action_tumblr"
        android:title="@string/str_action_tumblr"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_disqus"
        android:title="@string/str_action_disqus"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never"/>
</menu>
